--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="/site.js" defer></script>
 </head>
 <body>
+    <div class="welcome"></div>
     <div>
         <h1>Hello Ryan, my name is Devon.</h1>
         <p>
