--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
             but it's very rewarding in the end.
         </p>
     </div>
+    <div id="carousel">
+        <img alt="Image 1">
+        <img alt="Image 2">
+        <img alt="Image 3">
+    </div>
+    <div id="buttons">
+        <button id="prev">Previous</button>
+        <button id="next">Next</button>
+    </div>
+    
     <h2><img src="unnamed.jpg" alt="Picture of me" width="500" height="500"></h2>
     <h3> List of Favorite Movies/Shows</h3>
     <ul>
