--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <input type="text" id="new-todo" placeholder="Add a new item">
         <button type="button" id="todoButton">Add To Do</button>
         
-
     </div>
+    <div id="pokemonImage"></div>
     <h2><img src="unnamed.jpg" alt="Picture of me" width="500" height="500"></h2>
     <h3> List of Favorite Movies/Shows</h3>
     <ul>
