Fixed assignments upon further review

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         
     </div>
     <div id="pokemonImage"></div>
+    
     <h2><img src="unnamed.jpg" alt="Picture of me" width="500" height="500"></h2>
     <h3> List of Favorite Movies/Shows</h3>
     <ul>
@@ -45,5 +46,6 @@
         <li>House</li>
         <li>Pretty much anything that is Found Footage</li>
       </ul>
+    <div id="pokkakaak"></div>
 </body>
 </html>
