--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/style.css">
     <script src="/site.js" defer></script>
 </head>
-<body>
-
+<body>   
     <nav>
-        <ul>
-            <li><a href="Web/TestIdle.html">Home</a></li>
-        </ul>
+            
+            <p id=idleGame><a href="Web/TestIdle.html">Idle Game</a></p>
+            <p id=javaScriptIdleGame><a href="JavaScriptIdleGame/indexIdle.html">JavaScript IdleGame</a></p>
+        
     </nav>
 </body>
 </html>
