--- a/JavaScriptIdleGame/indexIdle.html
+++ b/JavaScriptIdleGame/indexIdle.html
@@ -25,7 +25,7 @@
 
     </div>
 
-    <audio id="clickSound" src="/JavaScriptIdleGame/sounds/Click.mp3"></audio>
+    <audio id="clickSound" src="/JavaScriptIdleGame/sounds/ClickingSound.wav"></audio>
 
 
 </body>
